--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "dependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@vitejs/plugin-react-refresh": "^1.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "vite": "^3.0.4",
-    "@vitejs/plugin-react": "^2.0.0"
+    "vite": "^2.2.1"
   }
 }
